--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -27,24 +27,7 @@ a.menubaritem:only-child {
 	   font-size: 31px;
 }
 
-.ui-menu {
-	background: #49c0f0; /* Old browsers */
-	background: -moz-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #49c0f0),
-		color-stop(100%, #2cafe3)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
-	/* IE10+ */
-	background: linear-gradient(to bottom, #49c0f0 0%, #2cafe3 100%);
-	/* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0',
-		endColorstr='#2cafe3', GradientType=0); /* IE6-9 */
-	color : white;
-}
+
 
 .ui-widget-content a {
   color: #4f4f4f;
@@ -89,5 +72,31 @@ a.menubaritem:only-child {
   top: 1px;
   overflow: auto;
   zoom: 1;
+}
+
+.ui-widget-content {
+  border: 1px solid #dddddd;
+  background: none;
+
+  background-color: white;
+}
+
+.nav {
+	background: #49c0f0; /* Old browsers */
+	background: -moz-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
+	/* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #49c0f0),
+		color-stop(100%, #2cafe3)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
+	/* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
+	/* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #49c0f0 0%, #2cafe3 100%);
+	/* IE10+ */
+	background: linear-gradient(to bottom, #49c0f0 0%, #2cafe3 100%);
+	/* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0',
+		endColorstr='#2cafe3', GradientType=0); /* IE6-9 */
+	color : white;
 }
 
