--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -27,7 +27,9 @@ a.menubaritem:only-child {
 	   font-size: 31px;
 }
 
-
+.ui-widget .ui-widget {
+  font-size: 0.9em;
+}
 
 .ui-widget-content a {
   color: #4f4f4f;
